--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
         <meta charset="UTF-8" />
     </head>
 <body>
-  <canvas id="canv" style="border:1px solid #000000;"></canvas>
-  <script src="jquery-3.3.1.min.js"></script>
+  <canvas id="canv" ></canvas>
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="bezier.js"></script>
 </body>
